<resources>
    <string name="app_name">Tournitap-Android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="homePageHeader">Tournitap</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="sign_in">Sign-In</string>
    <string name="title_activity_find_tournament">FindTournamentActivity</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="enter_tournamentName">Enter Tournament Name:</string>
    <!--Strings Related To Tournament Creation-->
    <string name="tournamentName">Tournament Name</string>
    <string name="description">Description</string>
    <string name="gameType">Game Type</string>
    <string name="skillLevel">Skill Level</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>
    <string name="hint_item">Enter Tournament Name</string>
    <string name="gameType_hint">Enter game type</string>
    <string name="save_title">Create Tournament</string>
    <string name="formatName_hint">Enter Format For Tournament</string>
    <string name="numParticipants_hint">Enter # of Participants of Tournament</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="popup_title">Tournament Form</string>
    <string name="displayTournamentCount">Displaying _ Tournaments</string>
    <string name="stageType_hint">Enter Stage Type</string>
    <string name="skillLevel_Hint">Enter Skill Level</string>
    <string name="description_Hint">Enter Tournament Description</string>
    <string name="totalRounds_Hint">Enter Total # of Rounds</string>
    <string name="registerTitle">Registration Form</string>
    <string name="hint_firstName">Enter First Name</string>
    <string name="hint_lastName">Enter Last Name</string>
    <string name="hint_middleInitial">Enter Middle Initial</string>
    <string name="hint_gender">Enter your gender(M,F, or O for Other)</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_Password">Enter Password for sign-in</string>
    <string name="hint_UserName">Set New UserName</string>
    <string name="save_userProfile">Submit Profile</string>
    <string name="phoneNumber">612-607-3182</string>
    <string name="name">Names</string>
    <string name="addy">Address</string>
    <string name="questions">Question</string>
    <string name="cell">Phone</string>
</resources>
