<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="roberttaylor.tournitap_android.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/registerTitle"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerTitle"
            android:hint="@string/hint_firstName"/>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstName"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_lastName"/>

        <EditText
            android:id="@+id/middleInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastName"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_middleInitial"/>

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleInitial"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_gender"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_email"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_Password"/>
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_UserName"/>


        <Button
            android:id="@+id/saveUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userName"
            android:background="@android:color/black"
            android:text="@string/save_userProfile"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>


    </RelativeLayout>



    <!-- Login progress -->
    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone"/>-->

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/email_login_form"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_email"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_password"-->
                    <!--android:imeActionId="@+id/login"-->
                    <!--android:imeActionLabel="@string/action_sign_in_short"-->
                    <!--android:imeOptions="actionUnspecified"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="@string/action_sign_in"-->
                <!--android:textStyle="bold"/>-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->
</LinearLayout>
