<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/layout_id"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/popup_title"
                android:textSize="18sp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/tournamentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tile"
                android:hint="@string/hint_item"/>

            <EditText
                android:id="@+id/gameType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tournamentName"
                android:layout_marginTop="15dp"
                android:hint="@string/gameType_hint"/>

            <EditText
                android:id="@+id/formatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameType"
                android:layout_marginTop="15dp"
                android:hint="@string/formatName_hint"/>

            <EditText
                android:id="@+id/numParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/formatName"
                android:layout_marginTop="15dp"
                android:hint="@string/numParticipants_hint"/>

            <EditText
                android:id="@+id/stageType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/numParticipants"
                android:layout_marginTop="15dp"
                android:hint="@string/stageType_hint"/>
            <EditText
                android:id="@+id/skillLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stageType"
                android:layout_marginTop="15dp"
                android:hint="@string/skillLevel_Hint"/>
            <EditText
                android:id="@+id/totalRounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skillLevel"
                android:layout_marginTop="15dp"
                android:hint="@string/totalRounds_Hint"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalRounds"
                android:layout_marginTop="15dp"
                android:hint="@string/description_Hint"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/description"
                android:background="@android:color/black"
                android:text="@string/save_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/tournamentNameSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechTournamentName"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/tournamentName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/gameTypeSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechGameType"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/gameType"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/formatSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechFormat"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/formatName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/participantsSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechNumParticipants"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/numParticipants"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/stageTypeSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechStageType"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/stageType"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/skillLevelSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechSkillLevel"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/skillLevel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/numRoundsSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechTotalNumRounds"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/totalRounds"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/tournamentDescriptionSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getSpeechTournamentDescription"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:layout_alignTop="@+id/description"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>