<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="roberttaylor.tournitap_android.CreateTournamentActivity">


    <TextView
        android:id="@+id/TournamentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournamentName"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/searchTournamentName"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchTournamentName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        />

    <EditText
        android:id="@+id/searchTournamentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:imeOptions="actionSend"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/searchDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:imeOptions="actionSend"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/gameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameType"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/searchSkillLevel"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/searchGameType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="217dp"
        android:imeOptions="actionSend"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/searchSkillLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="157dp"
        android:imeOptions="actionSend"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/skillLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skillLevel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchSkillLevel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

</android.support.constraint.ConstraintLayout>
